--- a/packages/change-case/tsconfig.json
+++ b/packages/change-case/tsconfig.json
@@ -1,9 +1,16 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
+    "target": "es2015",
+    "lib": ["esnext"],
+    "allowJs": true,
+    "checkJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "types": ["node", "rive/globals"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.spec.*", "src/**/*.bench.*"]
+  "exclude": [".rive", "build", "coverage", "dist", "node_modules"]
 }
